force-app/main/default/objects/Account/fields/TPM_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>TPM_Company_Code__c</fullName>
    <description>The vendor company code</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>