force-app/main/default/objects/Account/fields/TPM_Current_Year_SVF__c.field-meta.xml
<CustomField>
    <fullName>TPM_Current_Year_SVF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for SVF based on current business year</description>
    <label>Current Year SVF</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>Accounts (Current Year SVF)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>