force-app/main/default/objects/Account/fields/TPM_Dist_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_Dist_Channel_ID__c</fullName>
    <description>The ID of the Distribution Channel of the Account from Integrations</description>
    <label>Distribution Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>