force-app/main/default/objects/Account/fields/TPM_Dist_Channel_Nm__c.field-meta.xml
<CustomField>
    <fullName>TPM_Dist_Channel_Nm__c</fullName>
    <description>The name of the Distribution Channel of the Account from Integrations</description>
    <label>Distribution Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>