force-app/main/default/objects/Account/fields/TPM_Division__c.field-meta.xml
<CustomField>
    <fullName>TPM_Division__c</fullName>
    <description>The Division of the Account from Integration</description>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>