force-app/main/default/objects/Account/fields/TPM_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>TPM_Hierarchy_Level__c</fullName>
    <description>The level of the customer hierarchy in which this Account record lives</description>
    <label>Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Customer_Level</valueSetName>
    </valueSet>
</CustomField>