force-app/main/default/objects/Account/fields/TPM_Is_Assortment_Created__c.field-meta.xml
<CustomField>
    <fullName>TPM_Is_Assortment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies whether assortment has been created for the account.</description>
    <label>Is Assortment Created</label>
    <type>Checkbox</type>
</CustomField>