force-app/main/default/objects/Account/fields/TPM_IsActive__c.field-meta.xml
<CustomField>
    <fullName>TPM_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the Account is currently active.</description>
    <label>Active Flag</label>
    <type>Checkbox</type>
</CustomField>