force-app/main/default/objects/Account/fields/TPM_Next_Year_SVF__c.field-meta.xml
<CustomField>
    <fullName>TPM_Next_Year_SVF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for SVF based on Next business year</description>
    <label>Next Year SVF</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>Accounts (Next Year SVF)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>