force-app/main/default/objects/Account/fields/TPM_Planning_Mode__c.field-meta.xml
<CustomField>
    <fullName>TPM_Planning_Mode__c</fullName>
    <description>The planning mode of the Customer which controls the set of metrics displayed on the SVF</description>
    <label>Planning Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>