force-app/main/default/objects/Account/fields/TPM_PlnMdeChgFlag__c.field-meta.xml
<CustomField>
    <fullName>TPM_PlnMdeChgFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the planning mode of the Account will be changed.</description>
    <label>Planning Mode Changed Flag</label>
    <type>Checkbox</type>
</CustomField>