force-app/main/default/objects/Account/fields/TPM_Previous_Year_SVF__c.field-meta.xml
<CustomField>
    <fullName>TPM_Previous_Year_SVF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for SVF based on Previous business year</description>
    <label>Previous Year SVF</label>
    <referenceTo>cgcloud__Account_Plan__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>