force-app/main/default/objects/Account/fields/TPM_ProcessTPMCalculationChain__c.field-meta.xml
<CustomField>
    <fullName>TPM_ProcessTPMCalculationChain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Executes the TPMCalculationChain batch.</description>
    <label>ProcessTPMCalculationChain</label>
    <type>Checkbox</type>
</CustomField>