force-app/main/default/objects/Account/fields/TPM_SAP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TPM_SAP_External_ID__c</fullName>
    <description>The External ID of the Account from integration</description>
    <externalId>true</externalId>
    <label>SAP External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>