force-app/main/default/objects/Account/fields/TPM_SAP_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>TPM_SAP_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Deleted</label>
    <type>Checkbox</type>
</CustomField>