force-app/main/default/objects/Account/fields/TPM_Sector__c.field-meta.xml
<CustomField>
    <fullName>TPM_Sector__c</fullName>
    <description>Sector of the customer</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Sector</valueSetName>
    </valueSet>
</CustomField>