force-app/main/default/objects/Account/fields/TPM_Segment__c.field-meta.xml
<CustomField>
    <fullName>TPM_Segment__c</fullName>
    <description>Segment of the customer</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TPM_Segment</valueSetName>
    </valueSet>
</CustomField>