force-app/main/default/objects/Account/recordTypes/TPM_Vendor.recordType-meta.xml
<RecordType>
    <fullName>TPM_Vendor</fullName>
    <active>true</active>
    <label>Vendor</label>
</RecordType>